package org.example.ecommerce;

public class AppEcommerce {
    public static void main(String[] args) {
        System.out.println("¡Bienvenido a la tienda online!");
        Tienda.iniciarPago();
    }
}