package org.example.ecommerce;

abstract class MetodoPago {

    abstract void procesarPago(double importe);

}
